Fix SQ issues
DEVSIX-9238